--- a/app/views/friends/_lookup.html.erb
+++ b/app/views/friends/_lookup.html.erb
@@ -3,7 +3,7 @@
     <%= form_tag search_friends_path, remote: true, method: :get, id: 'friend-lookup-form' do %>
     <div class="form-group row no-padding text-center col-md-12">
         <div class="col-md-10">
-          <%= text_field_tag :search_param, params[:friend], placeholder: 'First Name, Last Name or Email', autofocus: true, 
+          <%= text_field_tag :search_param, params[:search_param], placeholder: 'First Name, Last Name or Email', autofocus: true, 
                                                               class: 'form-control search-box input-lg' %>
     </div>
     <div class="col-md-2">
